update comments/javadoc of XRefs generation